tests/compile-fail/cases/tainted_into_file_open.stderr
error[E0277]: the trait bound `Tainted<Vec<u8>>: AsRef<Path>` is not satisfied
 --> cases/tainted_into_file_open.rs:6:24
  |
6 |     let _ = File::open(t);
  |             ---------- ^ the trait `AsRef<Path>` is not implemented for `Tainted<Vec<u8>>`
  |             |
  |             required by a bound introduced by this call
  |
note: required by a bound in `File::open`
 --> $RUST/std/src/fs.rs
  |
  |     pub fn open<P: AsRef<Path>>(path: P) -> io::Result<File> {
  |                    ^^^^^^^^^^^ required by this bound in `File::open`
